--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "@webplayer/prismplayer-pc": "^0.2.1",
     "axios": "^0.27.2",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
