--- a/package.json
+++ b/package.json
@@ -16,28 +16,33 @@
     "axios": "^0.27.2",
     "craco-alias": "^3.0.1",
     "craco-antd": "^2.0.0",
+    "eslint": "^8.25.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
+    "prettier": "^2.7.1",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "tsc-files": "^1.1.3",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.1"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "nodemon -w craco.config.js -w ./src/theme/vars.scss -w ./src/theme/vars.less --exec \"craco start --config craco.config.js\"",
     "build": "craco build",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "test": "craco test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "typescript": "tsc --project tsconfig.json --noEmit",
+    "lint-staged": "lint-staged --config lint-staged.js",
+    "husky-install": "husky install"
   },
   "browserslist": {
     "production": [
@@ -54,6 +59,22 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "@types/video.js": "^7.3.47",
+    "babel-eslint": "^10.1.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.31.10",
+    "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.20",
     "source-map-explorer": "^2.5.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint && yarn format"
+    }
+  },
+  "lint-staged": {
+    "*.+(js|ts|tsx|jsx)": "eslint --fix",
+    "*.+(json|css|md)": "prettier --write"
   }
 }
