--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "zustand": "^4.1.1"
   },
   "scripts": {
-    "start": "nodemon -w craco.config.js -w ./src/theme/vars.scss -w ./src/theme/vars.less --exec \"craco start --config craco.config.js\"",
+    "start": "nodemon -w craco.config.js -w ./src/theme/vars.scss -w ./src/theme/vars.less --exec \"craco start\"",
     "build": "craco build",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "test": "craco test",
