--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,7 @@
 {
-  "semi": false,
+  "semi": true,
   "tabWidth": 2,
   "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "none",
   "jsxBracketSameLine": true
 }
