--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "start": "nodemon -w craco.config.js -w ./src/theme/vars.scss -w ./src/theme/vars.less --exec \"craco start\"",
     "build": "craco build",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
@@ -57,6 +57,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/video.js": "^7.3.47",
     "babel-eslint": "^10.1.0",
@@ -70,22 +73,6 @@
   "husky": {
     "hooks": {
       "pre-commit": "yarn lint && yarn format"
-    }
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/components/**/*.{tsx,ts}",
-      "!**/node_modules/**",
-      "!**/src/test-utils/**",
-      "!**/src/index.tsx",
-      "!**/src/App.tsx"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 60,
-        "functions": 60,
-        "lines": 60
-      }
     }
   },
   "lint-staged": {
