--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "craco-alias": "^3.0.1",
     "craco-antd": "^2.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.25.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
@@ -35,7 +36,9 @@
     "start": "nodemon -w craco.config.js -w ./src/theme/vars.scss -w ./src/theme/vars.less --exec \"craco start\"",
     "build": "craco build",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "test": "jest",
+    "test": "jest --watch",
+    "test:coverage": "jest --coverage  --changedFilesWithAncestor",
+    "test:watch": "cross-env NODE_ENV=test jest --watchAll --coverage",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
