--- a/jest.config.json
+++ b/jest.config.json
@@ -1,16 +1,22 @@
 {
+  "moduleDirectories": ["src", "node_modules"],
+  "testEnvironment": "jsdom",
+  "roots": ["<rootDir>/src"],
+  "collectCoverage": true,
   "collectCoverageFrom": [
-    "src/components/**/*.{tsx,ts}",
+    "src/**/*.{tsx,ts}",
     "!**/node_modules/**",
     "!**/src/test-utils/**",
     "!**/src/index.tsx",
-    "!**/src/App.tsx"
+    "!**/src/**/*.d.ts"
   ],
+  "setupFilesAfterEnv": ["<rootDir>/jest-setup.ts"],
   "coverageThreshold": {
-    "global": {
+    "*/**": {
       "branches": 60,
       "functions": 60,
-      "lines": 60
+      "lines": 60,
+      "statements": 60
     }
   },
   "moduleNameMapper": {
